UI: Fully Mobile responsive layout

--- a/index.html
+++ b/index.html
@@ -12,53 +12,47 @@
 </head>
 
 <body class="bg-[#0f172a] text-slate-200 h-screen flex overflow-hidden font-sans">
-
-    <aside class="w-20 lg:w-24 flex flex-col items-center py-8 border-r border-slate-800 bg-[#0f172a] z-10 shrink-0">
-        <div class="mb-10 p-3 bg-blue-600 rounded-2xl shadow-lg shadow-blue-500/20">
-            <i data-lucide="bot" class="w-8 h-8 text-white"></i>
+<div class="flex flex-col md:flex-row h-screen overflow-hidden">
+    
+    <aside class="w-full md:w-20 lg:w-24 bg-[#0f172a] flex flex-row md:flex-col items-center py-4 md:py-8 border-b md:border-r border-slate-800 justify-around md:justify-start md:space-y-8 z-10">
+        <div class="p-2 bg-blue-600 rounded-2xl shadow-lg shadow-blue-500/20">
+            <i data-lucide="bot" class="w-6 h-6 md:w-8 md:h-8 text-white"></i>
         </div>
-        <nav class="flex flex-col gap-8 flex-1 opacity-60">
-            <i data-lucide="layout-dashboard" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition"></i>
-            <i data-lucide="book-open" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition"></i>
-            <i data-lucide="settings" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition"></i>
+        <nav class="flex flex-row md:flex-col gap-6 md:gap-8 opacity-60">
+            <i data-lucide="layout-dashboard" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition-all"></i>
+            <i data-lucide="book-open" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition-all"></i>
+            <i data-lucide="settings" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition-all"></i>
         </nav>
     </aside>
 
-    <main class="flex-1 flex flex-col relative overflow-hidden bg-[#0f172a]">
-        <header
-            class="h-20 border-b border-slate-800 flex items-center justify-between px-8 bg-[#0f172a]/50 backdrop-blur-md shrink-0">
+    <main class="flex-1 flex flex-col bg-[#0f172a] relative overflow-hidden">
+        <header class="h-16 md:h-20 border-b border-slate-800 flex items-center justify-between px-4 md:px-8 backdrop-blur-md">
             <div>
-                <h1 class="text-xl font-bold">AI Mentor Pro</h1>
+                <h1 class="text-lg md:text-xl font-bold">AI Mentor Pro</h1>
                 <p class="text-[10px] text-blue-400 uppercase tracking-widest">Active Learning Session</p>
             </div>
         </header>
 
-        <div id="chat-box" class="flex-1 overflow-y-auto p-6 space-y-6">
-            <div class="flex gap-4 max-w-3xl">
-                <div class="w-10 h-10 rounded-xl bg-blue-600 flex items-center justify-center shrink-0">
-                    <i data-lucide="sparkles" class="w-5 h-5 text-white"></i>
-                </div>
-                <div class="bg-slate-800/40 border border-slate-700 p-4 rounded-2xl rounded-tl-none glass text-sm">
-                    Hello,I am your AI mentor.What topic are we going to cover today?
-                </div>
+        <div id="chat-box" class="flex-1 overflow-y-auto p-4 md:p-6 space-y-6">
             </div>
-        </div>
 
-        <footer class="p-6 shrink-0">
-            <div
-                class="max-w-4xl mx-auto flex gap-4 items-center bg-slate-800/40 border border-slate-700 p-2 rounded-2xl glass focus-within:border-blue-500/50 transition-all">
-                <input type="text" id="user-input" placeholder="Ask your question here..."
-                    class="flex-1 bg-transparent border-none outline-none text-slate-200 px-4 py-3 text-sm">
-                <button id="mic-btn" class="p-3 text-slate-400 hover:text-blue-400 transition-all">
-                    <i data-lucide="mic" class="w-6 h-6"></i>
+        <footer class="p-4 md:p-6 shrink-0">
+            <div class="max-w-4xl mx-auto flex gap-2 md:gap-4 items-center bg-slate-800/40 border border-slate-700 p-2 rounded-2xl">
+                <input type="text" id="user-input" placeholder="Ask your question here..." class="flex-1 bg-transparent border-none outline-none text-slate-200 px-2 md:px-4 py-2 text-sm md:text-base">
+                <button id="mic-btn" class="p-2 text-slate-400 hover:text-blue-400 transition-all">
+                    <i data-lucide="mic" class="w-5 h-5 md:w-6 md:h-6"></i>
                 </button>
-                <button id="send-btn"
-                    class="bg-blue-600 hover:bg-blue-500 p-4 rounded-xl shadow-lg transition-all active:scale-95">
+                <button id="send-btn" class="bg-blue-600 hover:bg-blue-500 p-2 md:p-3 rounded-xl transition-all active:scale-95">
                     <i data-lucide="send" class="w-5 h-5 text-white"></i>
                 </button>
             </div>
         </footer>
     </main>
+
+    <aside class="hidden xl:block w-80 border-l border-slate-800 p-6">
+        <h3 class="text-lg font-semibold mb-6">Learning Progress</h3>
+        </aside>
+</div>
 
     <aside class="w-72 border-l border-slate-800 bg-[#0f172a]/50 p-8 flex flex-col shrink-0">
         <h3 class="text-lg font-semibold mb-6">Learning Progress</h3>
