--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,13 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="bg-[#0f172a] text-slate-200 h-screen overflow-hidden font-sans">
 
     <div class="flex flex-col md:flex-row h-full w-full">
-        
-        <aside class="w-full md:w-20 bg-[#1e293b] flex flex-row md:flex-col items-center py-3 md:py-8 border-b md:border-r border-slate-700 justify-around md:justify-start md:space-y-8 z-30 shrink-0">
+
+        <aside
+            class="w-full md:w-20 bg-[#1e293b] flex flex-row md:flex-col items-center py-3 md:py-8 border-b md:border-r border-slate-700 justify-around md:justify-start md:space-y-8 z-30 shrink-0">
             <div class="p-2 bg-blue-600 rounded-xl shadow-lg">
                 <i data-lucide="bot" class="w-6 h-6 text-white"></i>
             </div>
@@ -30,11 +33,22 @@
             </header>
 
             <div id="chat-box" class="flex-1 overflow-y-auto p-4 md:p-6 space-y-6">
+                <div class="flex gap-4 max-w-3xl">
+                    <div class="w-10 h-10 rounded-xl bg-blue-600 flex items-center justify-center shrink-0">
+                        <i data-lucide="bot" class="w-6 h-6 text-white"></i>
+                    </div>
+                    <div class="bg-slate-800/40 border border-slate-700 p-4 rounded-2xl rounded-tl-none glass text-sm">
+                        Hello, I am your AI mentor. What topic are we going to cover today?
+                    </div>
                 </div>
+            </div>
+
 
             <footer class="p-4 bg-[#0f172a] border-t border-slate-800/50">
-                <div class="max-w-4xl mx-auto flex gap-2 items-center bg-slate-800/40 border border-slate-700 p-2 rounded-2xl">
-                    <input type="text" id="user-input" placeholder="Ask anything..." class="flex-1 bg-transparent border-none outline-none px-3 py-2 text-sm">
+                <div
+                    class="max-w-4xl mx-auto flex gap-2 items-center bg-slate-800/40 border border-slate-700 p-2 rounded-2xl">
+                    <input type="text" id="user-input" placeholder="Ask anything..."
+                        class="flex-1 bg-transparent border-none outline-none px-3 py-2 text-sm">
                     <button id="mic-btn" class="p-2 text-slate-400 hover:text-blue-400">
                         <i data-lucide="mic" class="w-5 h-5"></i>
                     </button>
@@ -45,9 +59,10 @@
             </footer>
         </main>
 
-        <aside class="w-full md:w-72 lg:w-80 bg-[#1e293b]/30 border-t md:border-t-0 md:border-l border-slate-800 p-6 overflow-y-auto">
+        <aside
+            class="w-full md:w-72 lg:w-80 bg-[#1e293b]/30 border-t md:border-t-0 md:border-l border-slate-800 p-6 overflow-y-auto">
             <h3 class="text-lg font-semibold mb-6">Learning Progress</h3>
-            
+
             <div class="bg-white/5 p-5 rounded-3xl border border-white/5 mb-6">
                 <div class="flex justify-between text-xs mb-2">
                     <span class="text-slate-400">Java Basics</span>
@@ -70,4 +85,5 @@
     <script>lucide.createIcons();</script>
     <script src="script.js"></script>
 </body>
+
 </html>
