--- a/index.html
+++ b/index.html
@@ -15,54 +15,91 @@
 
     <div class="flex flex-col md:flex-row h-full w-full">
 
-        <aside
-            class="w-full md:w-20 bg-[#1e293b] flex flex-row md:flex-col items-center py-3 md:py-8 border-b md:border-r border-slate-700 justify-around md:justify-start md:space-y-8 z-30 shrink-0">
+        <aside class="w-full md:w-20 bg-[#1e293b] flex flex-row md:flex-col items-center py-3 md:py-8 border-b md:border-r border-slate-700 justify-around md:justify-start md:space-y-8 z-30 shrink-0">
             <div class="p-2 bg-blue-600 rounded-xl shadow-lg">
                 <i data-lucide="bot" class="w-6 h-6 text-white"></i>
             </div>
             <nav class="flex flex-row md:flex-col gap-6 md:gap-10 opacity-60">
-                <i data-lucide="layout-dashboard" class="w-6 h-6 cursor-pointer hover:text-blue-400"></i>
-                <i data-lucide="book-open" class="w-6 h-6 cursor-pointer hover:text-blue-400"></i>
-                <i data-lucide="settings" class="w-6 h-6 cursor-pointer hover:text-blue-400"></i>
+                <i id="nav-chat" data-lucide="layout-dashboard" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition-colors"></i>
+                <i id="nav-books" data-lucide="book-open" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition-colors"></i>
+                <i id="nav-settings" data-lucide="settings" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition-colors"></i>
             </nav>
         </aside>
 
         <main class="flex-1 flex flex-col bg-[#0f172a] overflow-hidden min-w-0">
             <header class="h-16 border-b border-slate-800 flex items-center px-6 shrink-0">
-                <h1 class="text-lg font-bold">AI Mentor Pro</h1>
+                <h1 id="section-title" class="text-lg font-bold tracking-tight">AI Mentor Pro</h1>
             </header>
 
-            <div id="chat-box" class="flex-1 overflow-y-auto p-4 md:p-6 space-y-6">
-                <div class="flex gap-4 max-w-3xl">
-                    <div class="w-10 h-10 rounded-xl bg-blue-600 flex items-center justify-center shrink-0">
-                        <i data-lucide="bot" class="w-6 h-6 text-white"></i>
+            <div id="chat-section" class="flex-1 flex flex-col overflow-hidden">
+                <div id="chat-box" class="flex-1 overflow-y-auto p-4 md:p-6 space-y-6">
+                    <div class="flex gap-4 max-w-3xl">
+                        <div class="w-10 h-10 rounded-xl bg-blue-600 flex items-center justify-center shrink-0">
+                            <i data-lucide="bot" class="w-6 h-6 text-white"></i>
+                        </div>
+                        <div class="bg-slate-800/40 border border-slate-700 p-4 rounded-2xl rounded-tl-none glass text-sm shadow-xl">
+                            Hello, I am your AI mentor. What topic are we going to cover today?
+                        </div>
                     </div>
-                    <div class="bg-slate-800/40 border border-slate-700 p-4 rounded-2xl rounded-tl-none glass text-sm">
-                        Hello, I am your AI mentor. What topic are we going to cover today?
+                </div>
+
+                <footer class="p-4 bg-[#0f172a] border-t border-slate-800/50">
+                    <div class="max-w-4xl mx-auto flex gap-2 items-center bg-slate-800/40 border border-slate-700 p-2 rounded-2xl">
+                        <input type="text" id="user-input" placeholder="Ask anything..." class="flex-1 bg-transparent border-none outline-none px-3 py-2 text-sm text-white">
+                        <button id="mic-btn" class="p-2 text-slate-400 hover:text-blue-400"><i data-lucide="mic" class="w-5 h-5"></i></button>
+                        <button id="send-btn" class="bg-blue-600 p-2 rounded-xl hover:bg-blue-500 transition-all active:scale-90"><i data-lucide="send" class="w-5 h-5 text-white"></i></button>
+                    </div>
+                </footer>
+            </div>
+
+            <div id="books-section" class="hidden flex-1 overflow-y-auto p-6 space-y-8 bg-[#0f172a]">
+                <div class="flex items-center justify-between border-b border-slate-800 pb-4">
+                    <h2 class="text-xl font-bold">Java Learning Path</h2>
+                    <span class="text-xs text-blue-400 bg-blue-600/10 px-3 py-1 rounded-full font-bold">3 MODULES</span>
+                </div>
+                
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                    <div class="group bg-slate-800/30 border border-slate-700 p-6 rounded-[2rem] hover:border-blue-500/50 transition-all glass">
+                       <div class="w-12 h-12 bg-blue-600/20 rounded-2xl flex items-center justify-center mb-6 text-blue-400 group-hover:scale-110 transition-transform">
+                            <i data-lucide="terminal" class="w-6 h-6"></i>
+                        </div>
+                        <h3 class="font-bold text-white">Java foundations</h3>
+                        <p class="text-xs text-slate-400 mt-2 mb-6 leading-relaxed">JVM, Variables, and your first "Hello World" program.</p>
+                        <div class="flex items-center justify-between">
+                            <span class="text-[10px] text-emerald-400 font-bold uppercase">Completed</span>
+                            <button class="bg-blue-600/80 hover:bg-blue-600 text-[10px] text-white font-bold px-4 py-2 rounded-xl">REVIEW</button>
+                        </div>
+                    </div>
+                    <div class="group bg-slate-800/30 border border-slate-700 p-6 rounded-[2rem] hover:border-purple-500/50 transition-all glass">
+                        <div class="w-12 h-12 bg-purple-600/20 rounded-2xl flex items-center justify-center mb-6 text-purple-400 group-hover:scale-110 transition-transform">
+                            <i data-lucide="git-branch" class="w-6 h-6"></i>
+                        </div>
+                        <h3 class="font-bold text-white">Logic & Loops</h3>
+                        <p class="text-xs text-slate-400 mt-2 mb-6 leading-relaxed">Mastering If-Else, Switch cases, and For/While loops logic.</p>
+                        <div class="flex items-center justify-between">
+                            <span class="text-[10px] text-slate-500 font-bold uppercase">40% PROGRESS</span>
+                            <button class="bg-slate-700 hover:bg-slate-600 text-[10px] text-white font-bold px-4 py-2 rounded-xl">CONTINUE</button>
+                        </div>
                     </div>
                 </div>
             </div>
-
-
-            <footer class="p-4 bg-[#0f172a] border-t border-slate-800/50">
-                <div
-                    class="max-w-4xl mx-auto flex gap-2 items-center bg-slate-800/40 border border-slate-700 p-2 rounded-2xl">
-                    <input type="text" id="user-input" placeholder="Ask anything..."
-                        class="flex-1 bg-transparent border-none outline-none px-3 py-2 text-sm">
-                    <button id="mic-btn" class="p-2 text-slate-400 hover:text-blue-400">
-                        <i data-lucide="mic" class="w-5 h-5"></i>
-                    </button>
-                    <button id="send-btn" class="bg-blue-600 p-2 rounded-xl">
-                        <i data-lucide="send" class="w-5 h-5 text-white"></i>
-                    </button>
+            <div id="settings-section" class="hidden flex-1 p-6 space-y-6 bg-[#0f172a]">
+                <h2 class="text-xl font-bold">Profile Settings</h2>
+                <div class="max-w-md space-y-4">
+                    <div class="bg-white/5 border border-white/5 p-4 rounded-2xl flex justify-between items-center">
+                        <span class="text-sm">Dark Mode</span>
+                        <div class="w-10 h-5 bg-blue-600 rounded-full relative"><div class="absolute right-1 top-1 w-3 h-3 bg-white rounded-full"></div></div>
+                    </div>
+                    <div class="bg-white/5 border border-white/5 p-4 rounded-2xl flex justify-between items-center opacity-50">
+                        <span class="text-sm">Language: English</span>
+                        <i data-lucide="chevron-right" class="w-4 h-4"></i>
+                    </div>
                 </div>
-            </footer>
+            </div>
         </main>
 
-        <aside
-            class="w-full md:w-72 lg:w-80 bg-[#1e293b]/30 border-t md:border-t-0 md:border-l border-slate-800 p-6 overflow-y-auto">
+        <aside class="w-full md:w-72 lg:w-80 bg-[#1e293b]/30 border-t md:border-t-0 md:border-l border-slate-800 p-6 overflow-y-auto shrink-0">
             <h3 class="text-lg font-semibold mb-6">Learning Progress</h3>
-
             <div class="bg-white/5 p-5 rounded-3xl border border-white/5 mb-6">
                 <div class="flex justify-between text-xs mb-2">
                     <span class="text-slate-400">Java Basics</span>
@@ -72,7 +109,6 @@
                     <div class="bg-blue-500 h-full w-[70%]"></div>
                 </div>
             </div>
-
             <div class="space-y-4">
                 <h4 class="text-[10px] uppercase text-slate-500 font-bold tracking-widest">Upcoming</h4>
                 <div class="flex items-center gap-3 p-3 rounded-xl bg-white/5 text-sm opacity-50">
@@ -85,5 +121,4 @@
     <script>lucide.createIcons();</script>
     <script src="script.js"></script>
 </body>
-
 </html>
